--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
-body {
-  padding-top: 65px;
+div.jumbotron {
+  margin-top: 25rem;
+  margin-bottom: 25rem;
+}
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+main {
+  z-index: 99;
+  position: absolute;
+  width: 100%;
 }
