--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 div.jumbotron {
   margin-top: 25rem;
   margin-bottom: 25rem;
+  transition: opacity 0.5s;
+  opacity: 0.7;
+}
+
+div.jumbotron:hover {
+  opacity: 1;
+  transition: 0.5s;
 }
 
 canvas {
